change jupyter notebook filename

--- a/Euro_Exchange_Rates_Analysis.ipynb
+++ b/Euro_Exchange_Rates_Analysis.ipynb
@@ -3,6 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "239d051f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in c:\\users\\alphagoal\\anaconda3\\lib\\site-packages (2.31.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\alphagoal\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\alphagoal\\anaconda3\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\alphagoal\\anaconda3\\lib\\site-packages (from requests) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\alphagoal\\anaconda3\\lib\\site-packages (from requests) (2023.11.17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "c970b6d6-e9a8-4965-9112-d94634ffd971",
    "metadata": {
     "tags": []
@@ -1245,6 +1267,7 @@
     }
    ],
    "source": [
+    "# display information about the columns in the dataset\n",
     "df.info()"
    ]
   },
